[gd_scene load_steps=5 format=3 uid="uid://k86xqnbx80ia"]

[ext_resource type="Script" uid="uid://byr7lnwhrsd0l" path="res://scripts/title_scene.gd" id="1_dapbu"]
[ext_resource type="Texture2D" uid="uid://b26akkkk87evl" path="res://assets/sprites/title-screen.png" id="2_73may"]
[ext_resource type="PackedScene" uid="uid://dmeswfb4dx1s5" path="res://scenes/areas/level1.tscn" id="2_u26lw"]
[ext_resource type="FontFile" uid="uid://dth2pukglue6d" path="res://assets/fonts/PixelOperator8.ttf" id="3_u26lw"]

[node name="TitleScrene" type="Node2D"]
script = ExtResource("1_dapbu")
next_level = ExtResource("2_u26lw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_73may")

[node name="MenuContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 640.0
offset_top = 418.0
offset_right = 1312.0
offset_bottom = 882.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StartButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u26lw")
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="Control2" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ExitButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u26lw")
theme_override_font_sizes/font_size = 32
text = "Exit Game"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="MenuContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="ready" from="MenuContainer/ExitButton" to="." method="_on_exit_button_ready"]
